# openbench

./: .editorconfig  .gitattributes  .gitignore  .sembleignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.husky/: pre-push
.opencode/: cron.config.yaml  opencode.json  package.json  tsconfig.json
.opencode/commands/: use-space.md
.opencode/cron/: config.ts  install.ts  job.ts  lock.ts  logger.ts  output.ts  runner.ts  scheduler.ts  types.ts  util.ts
.opencode/plugins/: harness.ts.disabled
.opencode/scripts/: update-impeccable.sh
artifacts/: README.md  _TEMPLATE.md
memory/: historical-decisions.md  index.md  work-repos.md
memory/eval/: README.md
memory/reviews/: README.md
memory/sessions/: README.md
memory/staging/: README.md
scheduled/: morning-briefing.yaml  space-session-sync.yaml  weekly-review.yaml
scripts/: obsidian-audit  setup
scripts/mcp-servers/: goodreads-mcp.mjs  package.json
scripts/sandbox/: opencode-sandbox  pii-scan
scripts/spaces/: space.py  sync-sessions.ts
scripts/workspace/: agent-eval.py  frontmatter.py  health-check.py  lib.py  memory-promoter.py  project-status.py  prune-decisions.py  requirements.txt  session-frontmatter.py  session-index.py  token-compress.py  update-index.py  (+2 more)
spaces/: README.md
tests/: basic.test.mjs  conftest.py  test_health_check.py  test_helpers.py  test_lib.py  test_session_frontmatter.py  test_token_compress.py  test_update_index.py  test_validate.py  vitest.config.ts
wiki/: README.md
work/: README.md
(+57 files in other folders)
