[project]
name = "openbench"
version = "0.1.0"
description = "A personal workspace for building projects, storing documents, and running agentic AI workflows."
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "S",   # bandit (security)
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "N999",  # module name with hyphens — deliberate workspace convention
    "S603",  # subprocess call — pre-existing pattern, agents fix their own
    "S607",  # partial executable path — pre-existing pattern
    "S608",  # SQL injection — pre-existing pattern in session-index
]

[tool.ruff.lint.per-file-ignores]
# Tests — assert is expected in tests
"tests/*.py" = ["S101"]
# Pre-existing scripts (not linted in CI, listed for local development)
"scripts/workspace/agent-eval.py" = ["F401", "I001", "UP017", "UP032"]
"scripts/workspace/memory-promoter.py" = ["F841", "I001", "UP017"]
"scripts/workspace/update-index.py" = ["F401", "I001", "UP017"]
"scripts/workspace/validate.py" = ["F401", "W292"]
"scripts/workspace/lib.py" = ["W292"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
